# MatrixEditor

./: CMakeLists.txt  EditorDispatcher.cpp  EditorDispatcher.h  EditorLogstack.cpp  EditorLogstack.h  ErrorDispatcher.h  LogstackManager.cpp  LogstackManager.h  Main.cpp  Matrix.cpp  Matrix.h  MatrixCell.cpp  MatrixCell.h  MatrixDispatcher.cpp  MatrixDispatcher.h  MechosMatrixTool.h  Palette.h  PlacementChain.cpp  PlacementChain.h  UIDispatcher.cpp  UIDispatcher.h  WinapiTools.cpp  WinapiTools.h
IO/: ConfigParser.cpp  ConfigParser.h  fFile.h
SF/: Input.cpp  Input.h  Math.h  RsrcDispatcher.cpp  RsrcDispatcher.h  Window.cpp  Window.h
UI/: BasicContainer.h  ButtonBase.h  Collider.h  ImgButton.cpp  ImgButton.h  MouseContactable.h  RectButton.cpp  RectButton.h  ScrollList.cpp  ScrollList.h  TextContainer.h
